--- a/EventModal.xaml
+++ b/EventModal.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
         xmlns:local="clr-namespace:HCI_Projekat2"
         mc:Ignorable="d"
         Title="Event" Height="500" Width="500" ResizeMode="NoResize">
@@ -50,30 +51,11 @@
         <Label Grid.Row="1" Grid.Column="1" Content="Name:" HorizontalAlignment="Right"></Label>
         <TextBox Grid.Row="1" Grid.Column="2" Name="TxtName" Text="{Binding Event.Name}"></TextBox>
         <Label Grid.Row="2" Grid.Column="1" Content="Date:" HorizontalAlignment="Right" ></Label>
-        <DatePicker
+        <xctk:DateTimePicker
             Name="TxtDatePicker"
-            Grid.Row="2" Grid.Column="2" SelectedDate="{Binding Event.Date}" DisplayDateStart="{Binding DateTime.Today}">
-            <DatePicker.BorderBrush>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="Blue" Offset="0" />
-                    <GradientStop Color="Red" Offset="1.0" />
-                </LinearGradientBrush>
-            </DatePicker.BorderBrush>
-            <DatePicker.Background>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="Blue" Offset="0.1" />
-                    <GradientStop Color="Orange" Offset="0.25" />
-                    <GradientStop Color="Green" Offset="0.75" />
-                    <GradientStop Color="Red" Offset="1.0" />
-                </LinearGradientBrush>
-            </DatePicker.Background>
-            <DatePicker.Foreground>
-                <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
-                    <GradientStop Color="Black" Offset="0.25" />
-                    <GradientStop Color="Green" Offset="1.0" />
-                </LinearGradientBrush>
-            </DatePicker.Foreground>
-        </DatePicker>
+            Grid.Row="2" Grid.Column="2" Format="Custom" FormatString="dd.MM.yyyy." TimePickerVisibility="Hidden" Value ="{Binding Event.Date}">
+
+        </xctk:DateTimePicker>
         <Label Grid.Row="3" Grid.Column="1" Content="Description:" HorizontalAlignment="Right"></Label>
         <TextBox Grid.Row="3" Grid.Column="2" Name="TxtDescription" Text="{Binding Event.Description}"></TextBox>
         <Label Grid.Row="4" Grid.Column="1" Content="Type:" HorizontalAlignment="Right"></Label>
