--- a/EventModal.xaml
+++ b/EventModal.xaml
@@ -3,11 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"
-        xmlns:local="clr-namespace:HCI_Projekat2"
+        xmlns:xctk="http://schemas.xceed.com/wpf/xaml/toolkit"        
         mc:Ignorable="d"
-        Title="Event" Height="500" Width="500" ResizeMode="NoResize">
-    <Grid Margin="20">
+        Title="Event" Height="500" Width="500" ResizeMode="NoResize" Closing="Closing_Click">
+    <Grid Margin="20">        
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"></RowDefinition>
             <RowDefinition Height="1*"></RowDefinition>
@@ -27,6 +26,7 @@
             <ColumnDefinition Width="2*"></ColumnDefinition>
             <ColumnDefinition Width="1.2*"></ColumnDefinition>
             <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="0.3*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
 
         <Image Source="{Binding Event.Icon}" Grid.Row="0" Grid.Column="0" Grid.RowSpan="4"></Image>
@@ -47,34 +47,55 @@
         </StackPanel>      
 
         <Label Grid.Row="0" Grid.Column="1" Content="Label:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Label" Grid.Row="0" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <TextBox Grid.Row="0" Grid.Column="2" Name="TxtLabel" Text="{Binding Event.Label, Mode=OneWay}"></TextBox>
+        
         <Label Grid.Row="1" Grid.Column="1" Content="Name:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Name" Grid.Row="1" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
+        
         <TextBox Grid.Row="1" Grid.Column="2" Name="TxtName" Text="{Binding Event.Name, Mode=OneWay}"></TextBox>
         <Label Grid.Row="2" Grid.Column="1" Content="Date:" HorizontalAlignment="Right" ></Label>
+        <Label Name="Warning_Date" Grid.Row="2" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <xctk:DateTimePicker
             Name="TxtDatePicker"
             Grid.Row="2" Grid.Column="2" Format="Custom" FormatString="dd.MM.yyyy." TimePickerVisibility="Hidden" Value ="{Binding Event.Date, Mode=OneWay}">
 
         </xctk:DateTimePicker>
+        
         <Label Grid.Row="3" Grid.Column="1" Content="Description:" HorizontalAlignment="Right"></Label>
         <TextBox Grid.Row="3" Grid.Column="2" Name="TxtDescription" Text="{Binding Event.Description, Mode=OneWay}"></TextBox>
+
         <Label Grid.Row="4" Grid.Column="1" Content="Type:" HorizontalAlignment="Right"></Label>
-        <ComboBox Grid.Row="4" Grid.Column="2" SelectedItem="{Binding Event.Type, Mode=OneWay}" Name="TxtType" ItemsSource="{Binding ViewType}"/>
+        <Label Name="Warning_Type" Grid.Row="4" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
+        <ComboBox Grid.Row="4" Grid.Column="2" SelectedItem="{Binding Event.Type}" Name="TxtType" ItemsSource="{Binding ViewType}" IsSynchronizedWithCurrentItem="True"/>
+        
         <Label Grid.Row="6" Grid.Column="1" Content="Alcohol:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Alchohol" Grid.Row="6" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <ComboBox Grid.Row="6" Grid.Column="2" SelectedItem="{Binding SelectedAlcohol, Mode=OneWay}" Name="TxtAlcohol" ItemsSource="{Binding CBListAlcohol}"/>
+
         <Label Grid.Row="7" Grid.Column="1" Content="Handicap:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Handicap" Grid.Row="7" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <ComboBox Grid.Row="7" Grid.Column="2" SelectedItem="{Binding SelectedHandicap, Mode=OneWay}" Name="TxtHandicap" ItemsSource="{Binding CBListHandicap}"/>
+        
         <Label Grid.Row="8" Grid.Column="1" Content="Smoking:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Smoking" Grid.Row="8" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <ComboBox Grid.Row="8" Grid.Column="2" SelectedItem="{Binding SelectedSmoking, Mode=OneWay}" Name="TxtSmoking" ItemsSource="{Binding CBListSmoking}"/>
+        
         <Label Grid.Row="9" Grid.Column="1" Content="Space:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Space" Grid.Row="9" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <ComboBox Grid.Row="9" Grid.Column="2" SelectedItem="{Binding SelectedSpace, Mode=OneWay}" Name="TxtSpace" ItemsSource="{Binding CBListSpace}"/>
+        
         <Label Grid.Row="10" Grid.Column="1" Content="Target audience:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Audience" Grid.Row="10" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <ComboBox Grid.Row="10" Grid.Column="2" SelectedItem="{Binding SelectedTA, Mode=OneWay}" Name="TxtAudience" ItemsSource="{Binding CBListTA}"/>
+        
         <Label Grid.Row="11" Grid.Column="1" Content="Price:" HorizontalAlignment="Right"></Label>
+        <Label Name="Warning_Price" Grid.Row="11" Grid.Column="3" Content="*" FontSize="24" Foreground="Red"/>
         <ComboBox Grid.Row="11" Grid.Column="2"  SelectedItem="{Binding SelectedPrice, Mode=OneWay}" Name="TxtPrice" ItemsSource="{Binding CBListPrice}"/>
+        
         <StackPanel Grid.Row="12" Grid.Column="2" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="60" Margin="15 0" Click="Button_Click_1">Submit</Button>
-            <Button Width="60" Margin="0" Click="Button_Click">Cancel</Button>
+            <Button Width="60" Margin="0" Click="CancelBtn_Click">Cancel</Button>
         </StackPanel>
     </Grid>
 </Window>
