--- a/TypeModal.xaml
+++ b/TypeModal.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:HCI_Projekat2"
         mc:Ignorable="d"
-        Title="Type" Height="500" Width="500">
+        Title="Type" Height="500" Width="500" Closing="Closing_Click">
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="1*"></RowDefinition>
@@ -20,17 +20,23 @@
         <Grid.ColumnDefinitions>            
             <ColumnDefinition Width="0.5*"></ColumnDefinition>
             <ColumnDefinition Width="2*"></ColumnDefinition>
+            <ColumnDefinition Width="0.2*"></ColumnDefinition>
         </Grid.ColumnDefinitions>
         <Label Grid.Row="4" Grid.Column="0" Content="Image:" HorizontalAlignment="Right"></Label>
-        <Image Source="{Binding Type.Icon, Mode=OneWay}" Grid.Row="4" Grid.Column="1"></Image>
+        <Label Name="Warning_Icon" Grid.Row="4" Grid.Column="2" Content="*" FontSize="24" Foreground="Red"/>
+        <Image Name="IconImage" Source="{Binding Type.Icon, Mode=OneWay}" Grid.Row="4" Grid.Column="1"></Image>
         <Button Grid.Row="5" Grid.Column="1" Click="Button_Click_2"  Width="120">Choose file</Button>
 
         <Label Grid.Row="0" Grid.Column="0" Content="Label:" HorizontalAlignment="Right"></Label>
-        <TextBox Grid.Row="0" Grid.Column="2" Name="TxtLabel" Text="{Binding Type.Label, Mode=OneWay}"></TextBox>
+        <Label Name="Warning_Label" Grid.Row="0" Grid.Column="2" Content="*" FontSize="24" Foreground="Red"/>
+        <TextBox Grid.Row="0" Grid.Column="1" Name="TxtLabel" Text="{Binding Type.Label, Mode=OneWay}"></TextBox>
+        
         <Label Grid.Row="1" Grid.Column="0" Content="Name:" HorizontalAlignment="Right"></Label>
-        <TextBox Grid.Row="1" Grid.Column="2" Name="TxtName" Text="{Binding Type.Name, Mode=OneWay}"></TextBox>
+        <Label Name="Warning_Name" Grid.Row="1" Grid.Column="2" Content="*" FontSize="24" Foreground="Red"/>
+        <TextBox Grid.Row="1" Grid.Column="1" Name="TxtName" Text="{Binding Type.Name, Mode=OneWay}"></TextBox>
+
         <Label Grid.Row="2" Grid.Column="0" Content="Description:" HorizontalAlignment="Right"></Label>
-        <TextBox Grid.Row="2" Grid.Column="2" Name="TxtDescription" Text="{Binding Type.Description, Mode=OneWay}"></TextBox>
+        <TextBox Grid.Row="2" Grid.Column="1" Name="TxtDescription" Text="{Binding Type.Description, Mode=OneWay}"></TextBox>
 
         <StackPanel Grid.Row="11" Grid.Column="1" Orientation="Horizontal" HorizontalAlignment="Right">
             <Button Width="60" Margin="15 0" Click="Button_Click_1">Submit</Button>
